Basic project setup with example subsystem, commands, button mappings

--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -24,6 +24,8 @@ android {
 }
 
 dependencies {
+    implementation 'org.ftclib.ftclib:vision:2.0.1'
+    implementation 'org.ftclib.ftclib:core:2.0.1'
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 }
